fix link in alert being invisible in dark mode (#77)

--- a/src/styles/lpp/dark.css
+++ b/src/styles/lpp/dark.css
@@ -280,6 +280,6 @@ div .themeboostunioninfobanner.alert.alert-info {
   color: var(--brand-noticed-bg-color);
 }
 
-div .themeboostunioninfobanner.alert.alert-info > a {
-  color: #0198f0;
+html.dark .alert-info a {
+  color: var(--button-noticed-bg-color);
 }
